Fixed layout issue when editor was expanded to fullscreen

--- a/djedi/static/djedi/themes/darth/theme.css
+++ b/djedi/static/djedi/themes/darth/theme.css
@@ -5343,25 +5343,25 @@ body {
   -ms-font-smoothing: antialiased;
   -o-font-smoothing: antialiased;
   font-smoothing: antialiased;
-}
-body.embedded {
   display: block;
   display: flex;
   flex-direction: column;
-  overflow: hidden;
 }
-body.embedded .tab-content {
+body .tab-content {
   flex: 1;
   display: flex;
   flex-direction: column;
 }
-body.embedded .tab-content .tab-pane {
+body .tab-content .tab-pane {
   flex: 1;
   height: auto;
   max-height: none;
 }
-body.embedded .tab-content .tab-pane #editor-iframe {
+body .tab-content .tab-pane #editor-iframe {
   height: 100%;
+}
+body.embedded {
+  overflow: hidden;
 }
 body.embedded .embed-shadow {
   pointer-events: none;
